@@ -1,4 +1,5 @@
 {{$NEXT}}
+- API change: Switch request_cb to take and return a parameter object
 
 0.011     2015-11-24 08:55:35+11:00 Australia/Melbourne
  - API change: Rename req_cb to request_cb
